Update timer and matching manager

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </p>
     </br>
         <p>
-            Developed by: <a href="https://github.com/BlakeMarterella">Blake Marterella (2021)</a>
+            Developed by: <a href="https://github.com/BlakeMarterella" target="_blank">Blake Marterella (2021)</a>
             <br/>
-            Adapted from: <a href="https://github.com/taniarascia/memory">Tania Rascia (2017)<a>
+            Adapted from: <a href="https://github.com/taniarascia/memory" target="_blank">Tania Rascia (2017)<a>
         </p>
         <button type="button" id="start" class="GlobalCenter">Start</button>
     </wrapper>
