Add reset button

--- a/public/matching.html
+++ b/public/matching.html
@@ -41,6 +41,7 @@
     };
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
+    const database = getDatabase();
   </script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/firebase.js"></script>
