add results table

--- a/public/results.html
+++ b/public/results.html
@@ -15,9 +15,20 @@
 <body>
     <wrapper>
         <h1>Results</h1>
-        <p>
-            You tried
-        </p>
+        <table>
+            <tr>
+                <th></th>
+                <th>Matches</th>
+                <th>Accuracy</th>
+                <th>Date</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>12</td>
+                <td>56%</td>
+                <td>Sample Data</td>
+            </tr>
+        </table>
         <button type="button" id="restart" class="GlobalCenter">Play Again</button>
     </wrapper>
 
