--- a/public/matching.html
+++ b/public/matching.html
@@ -15,11 +15,11 @@
 <body>
   <table class = "center">
     <tr>
-      <td colspan = "2" class = "time" id = "time">Time</td>
+      <td style="font-size: 2em" colspan = "2" class = "time" id = "time">Time</td>
     </tr>
     <tr>
-      <td id = "matches">Matches:</br>0</td>
-      <td id = "accuracy">Accuracy:</br>0.0%</td>
+      <td style="font-size: 1.25em" id="matches">Matches:</br>0</td>
+      <td style="font-size: 1.25em" id = "accuracy">Accuracy:</br>0.0%</td>
     </tr>
   </table>
   <div id="game"></div>
