--- a/public/matching.html
+++ b/public/matching.html
@@ -24,22 +24,12 @@
   </table>
   <div id="game"></div>
   
-  <script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.5.0/firebase-app.js";
-    // TO   DO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-    // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyCty60HL2t5UVK_bxpTKJYe7Qr2S9p9xjk",
-      authDomain: "isc-mathcing-game.firebaseapp.com",
-      databaseURL: "https://isc-mathcing-game-default-rtdb.firebaseio.com",
-      projectId: "isc-mathcing-game",
-      storageBucket: "isc-mathcing-game.appspot.com",
-      messagingSenderId: "414403306402",
-      appId: "1:414403306402:web:f6dcf1e33a383a065f48fb"
-    };
-  </script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-database.js"></script>
+
+ 
   <script src="assets/js/main.js"></script>
   <script src="assets/js/firebase.js"></script>
   <script>
