do more font sizes

--- a/public/results.html
+++ b/public/results.html
@@ -26,7 +26,7 @@
                 <td>1</td>
                 <td>12</td>
                 <td>56%</td>
-                <td>Sample Data</td>
+                <td>Sample fData</td>
             </tr>
         </table>
         <button type="button" id="restart" class="GlobalCenter">Play Again</button>
