ADD RESULT PAGEEEE

--- a/public/results.html
+++ b/public/results.html
@@ -17,12 +17,11 @@
         <h1>Results</h1>
         <table>
             <tr>
-                <th></th>
                 <th>Matches</th>
                 <th>Accuracy</th>
                 <th>Date</th>
             </tr>
-            <tbody id="score"> </tbody> 
+            <tbody id="score" style="font-size: 12px;"> </tbody> 
         </table>
         <button type="button" id="restart" class="GlobalCenter">Play Again</button>
     </wrapper>
