--- a/public/results.html
+++ b/public/results.html
@@ -2,27 +2,25 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
   
-  <title>Memory Analysis</title>
+    <title>Memory Analysis</title>
 
-  <link rel="stylesheet" href="assets/css/main.css">
-  <link rel="icon" type="image/png" href="assets/img/mushroom.png">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="icon" type="image/png" href="assets/img/mushroom.png">
+
+    <!-- Install dependencies for Tabulator table -->
+    <link href="https://unpkg.com/tabulator-tables/dist/css/tabulator.min.css" rel="stylesheet">
+    <script type="text/javascript" src="https://unpkg.com/tabulator-tables/dist/js/tabulator.min.js"></script>
+    <script type="text/javascript" src="https://oss.sheetjs.com/sheetjs/xlsx.full.min.js"></script>
 </head>
 
 <body>
     <wrapper>
         <h1>Results</h1>
-        <table>
-            <tr>
-                <th>Matches</th>
-                <th>Accuracy</th>
-                <th>Date</th>
-            </tr>
-            <tbody id="score" style="font-size: 12px;"> </tbody> 
-        </table>
+        <div id="results" style="margin-left: 8px; margin-right: 8px;"></div>
         <button type="button" id="restart" class="GlobalCenter">Play Again</button>
     </wrapper>
 
