--- a/public/results.html
+++ b/public/results.html
@@ -20,6 +20,7 @@
 <body>
     <wrapper>
         <h1>Results</h1>
+        <h2 id="yourScore">Your Score:</h2>
         <div id="results" style="margin-left: 8px; margin-right: 8px;"></div>
         <button type="button" id="restart" class="GlobalCenter">Play Again</button>
     </wrapper>
@@ -28,7 +29,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-database.js"></script>
-
 
     <script src="assets/js/results.js"></script>
     <script type="text/javascript">
