--- a/public/results.html
+++ b/public/results.html
@@ -20,7 +20,7 @@
 <body>
     <wrapper>
         <h1>Results</h1>
-        <h2 id="yourScore">Your Score:</h2>
+        <h2 id="yourScore"><u>Your Score:</u></h2>
         <div id="results" style="margin-left: 8px; margin-right: 8px;"></div>
         <button type="button" id="restart" class="GlobalCenter">Play Again</button>
     </wrapper>
