Add Loading Data Icon

--- a/public/results.html
+++ b/public/results.html
@@ -21,7 +21,7 @@
     <wrapper>
         <h1>Results</h1>
         <h2 id="yourScore"><u>Your Score:</u></h2>
-        <div id="results" style="margin-left: 8px; margin-right: 8px;"></div>
+        <div id="results" class="result"></div>
         <button type="button" id="restart" class="GlobalCenter">Play Again</button>
     </wrapper>
 
